# alpaca

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Parameters.cpp  Parameters.h  PluginProcessor.cpp  PluginProcessor.h
pre-project-files/: MonkSynth_AudioThread_RealTime_Safety_and_Concurrency_Spec.md  MonkSynth_Build_CI_and_Release_Engineering_Spec.md  MonkSynth_JUCE_Architecture_Blueprint.md  MonkSynth_Modulation_Matrix_Expansion_Spec.md  MonkSynth_Parameter_and_MIDI_Mapping_Spec.md  MonkSynth_Testing_and_QA_Specification.md  MonkSynth_UI_Component_and_Implementation_Spec.md  MonkSynth_VST3_DSP_Math_Details.md  MonkSynth_VST3_Project_Plan_and_AI_Agent_Prompt.md
project-plan/: AI_AGENT_PROMPT.md  MASTER_PROJECT_PLAN.md  README.md
project-plan/support-files/: DSP_Algorithm_Specification.md  Formant_Tables.md  Parameter_Reference.md
